--- a/module_main/src/main/res/values/colors.xml
+++ b/module_main/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="main_tab_unselect">#707070</color>
+    <color name="main_tab_select">#1296db</color>
 </resources>
