--- a/module_main/src/main/res/layout/main_tab_item.xml
+++ b/module_main/src/main/res/layout/main_tab_item.xml
@@ -5,18 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:src="@mipmap/ic_launcher"
+        android:layout_marginTop="@dimen/main_tab_top"
         android:id="@+id/main_tab_icon_iv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/main_title_tv"
+        android:layout_above="@id/main_tab_title_tv"
         />
     <TextView
+        android:paddingBottom="@dimen/main_tab_bottom"
         android:textColor="@color/main_tab_text"
         android:gravity="center"
         android:layout_alignParentBottom="true"
-        android:text="@string/app_name"
-        android:id="@+id/main_title_tv"
+        android:id="@+id/main_tab_title_tv"
+        android:maxLines="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </RelativeLayout>
